--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="../public/logo192.png" />
-    <link rel="manifest" href="../public/manifest.json" />
+    <!-- <link rel="manifest" href="../public/manifest.json" /> -->
     <title>React App</title>
   </head>
   <body>
